# mbshake

./: .gitignore  README.md  build_copy.bat  config.json  consolidate.py  copy_bin.sh  microbit-datagather.hex  microbit-datalogger_18ms.hex  module.json
inc/: BitUtil.h  Debouncer.h  DelayBuffer.h  EventThresholdFilter.h  FastMath.h  FixedPt.h  GestureDetector.h  IirFilter.h  MicroBitAccess.h  RingBuffer.h  RunningStats.h  Vector3.h
microbit-shake/: BitVM.h  MicroBitGestureDetector.h  MicroBitTouchDevelop.h
microbit-touchdevelop/: BMP085.h
microbit_test/: CMakeLists.txt  delayBuffer_test.cpp  fastmath_test.cpp  fixed_test.cpp  fixed_vector_test.cpp  iirFilter_test.cpp  main_stub.cpp  microbit_test.cpp  ringBuffer_test.cpp  runningStats_test.cpp  vec3_test.cpp  vector3_test.cpp
source/: GestureDetector.cpp  MicroBitCustomConfig.h  MicroBitGestureDetector.cpp  MicroBitTouchDevelop.cpp  classifier.cpp  classifier.h  classifiers.cpp  delayBuffer.h  eventThresholdFilter.h  fastmath.h  iirFilter.h  main.cpp  main.h  ringBuffer.h  runningStats.h  vec3.h
test/: CMakeLists.txt  main_stub.cpp  microbit_test.cpp
